import { string,MediaObject } from "./string,MediaObject";
import { ImageObject } from "./ImageObject";
import { PropertyValue,string } from "./PropertyValue,string";


export class ImageObject extends MediaObject {
  embeddedTextCaption: string;
  representativeOfPage: boolean;
  caption: string,MediaObject;
  thumbnail: ImageObject;
  exifData: PropertyValue,string;


}
